src/main/java/com/example/tms/error/UserAlreadyExistException.java
package com.example.tms.error;

public class UserAlreadyExistException extends RuntimeException {

    public UserAlreadyExistException(String message) {
        super(message);
    }
}
